Version 4.1-3

 o Handle xlevels=n argument correctly in Effect() (fixing bug reported by Gerrit Eichner).

Version 4.1-2

 o Effect methods for clm, clm2, and clmm models were not correctly passing the estimated theshholds to polr for computing effects (error reported by Stefan Th. Gries).  
 
 o Updated "Defining Effects Methods ..." vignette to reflect revisions to Effect.clm, Effect.clm2 and Effect.clmm.
 
 o Make sure that Effect() and plot() methods work correctly with character and logical predictors (following bug report by Julian Gaviria Lopez).

Version 4.1-1
 
 o Accommodate character and logical predictors.
 
 o Make sure that lty argument to plot() is not ignored.
 
 o Change behavior of default levels argument to predictorEffect.default() and predictorEffects.default() when residuals=TRUE to match that of Effect.lm().
 
 o Fix to Effect.default() to make fake glm fit more robust and fixed bug in .set.given.equal() in tests for model class.

Version 4.1-0

 o Fixed a bug in Effect.gls to ignore the 'weights' argument on the call to gls.
 
 o Added predictor effects graphics gallery vignette.
 
 o predictorEffect() and predictorEffects() have new xlevels and focal.levels arguments.

 o Removed the transform argument from as.data.frame.eff(), and added type argument.  Made the transformation argument to Effect() a legacy argument and added transform as sub-argument to axes=list(y=list(transform=...)) in plot.eff(). 
 
 o Rearanged man files.
 
 o Extend use of cex sub-args for x and y axes and lattice strips to plot.effpoly().
 
 o Avoid warnings when testing given.values == "default" or "equal".
 
 o Modified plot.effpoly() so that multiline plots don't show confidence limits by default, and so that confidence bars for a factor are staggered.
 
 o Added effectsHexsticker().
 
 o Fixed bug in plotting partial residuals when a factor focal predictor had empty levels.
 
 o Small fixes and improvements.

Version 4.0-3
