@@ -1,6 +1,6 @@
 Package: effects
 Version: 4.1-3
-Date: 2019-09-04
+Date: 2019-10-24
 Title: Effect Displays for Linear, Generalized Linear, and Other Models
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
