@@ -11,8 +11,8 @@ call is \code{lattice::trellis.par.set(effectsTheme())}.
 
 \usage{
 effectsTheme(strip.background = list(col = gray(seq(0.95, 0.5, length = 3))), 
-    strip.shingle = list(col = "black"), clip = list(strip = "off"), 
-    superpose.line = list(lwd = c(2, rep(1, 6))))
+          strip.shingle = list(col = "black"), clip = list(strip = "off"), 
+          superpose.line = list(lwd = c(2, rep(1, 6))), col)
 }
 
 \arguments{
@@ -23,6 +23,12 @@ effectsTheme(strip.background = list(col = gray(seq(0.95, 0.5, length = 3))),
   \item{clip}{the default allows lines showing values of conditioning variables to extend slightly beyond the boundaries of 
     the strips---making the lines more visible at the extremes.}
   \item{superpose.line}{the default sets the line width of the first (of seven) lines to 2.}
+  \item{col}{an optional argument specifying the colors to use for lines and symbolst: 
+  if \code{col = "car"}, then the color palette for the \pkg{car} package is used (see \code{\link[car]{carPalette}});
+  \code{col = "R"}, then the current R palette (ignoring the first entry which is \code{"black"} in the standard R palette) is used (see \code{\link{palette}});
+  if \code{col = "colorblind"}, then a colorblind-friendly palette (from \url{https://jfly.uni-koeln.de/color/} but ignoring black) is used;
+  if a vector of color specifications, then these are used.
+  If \code{col} isn't specified then the current \pkg{lattice} colors are used.}
 }
 
 \value{
